--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Sketec</title>
+    <title>WKC Group</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -234,21 +234,9 @@
             <div class="row centered">
                 <h2 class="centered">Meet Our Team</h2>
                 <hr>
-                <div class="col-lg-4 centered">
+                <div class="col-lg-12 centered">
                     <img class="img img-circle" src="assets/img/team/team1.jpg" height="120px" width="120px" alt="">
                     <h4>Kitipat V.</h4>
-                    <p></p>
-                    <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <div class="col-lg-4 centered">
-                    <img class="img img-circle" src="assets/img/team/team2.jpg" height="120px" width="120px" alt="">
-                    <h4>Rittichai H.</h4>
-                    <p></p>
-                    <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <div class="col-lg-4 centered">
-                    <img class="img img-circle" src="assets/img/team/team3.jpg" height="120px" width="120px" alt="">
-                    <h4>Parinya K.</h4>
                     <p></p>
                     <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
@@ -297,7 +285,7 @@
                         </div>
                         <div class="col-sm-4 col-xs-offset-4 col-sm-offset-0" style="text-align:left;">
                             <p><i class="fa fa-user fa-2x"></i>  Kitipat Veerachien</p>
-                            <p><i class="fa fa-envelope-o fa-2x"></i>  kitipat@sketecthailand.com</p>
+                            <p><i class="fa fa-envelope-o fa-2x"></i>  kitipat@wkcgroupthailand.com</p>
                             <p><i class="fa fa-phone fa-2x"></i>  +6689-199-1414</p>
                         </div>
                     </div>
@@ -335,7 +323,7 @@
     <div id="footerwrap">
         <div class="container">
             <div class="row">
-                <div class="col-md-8"> <span class="copyright">Copyright &copy; 2015 Sketec. Design by <a href="http://www.templategarden.com" rel="nofollow">TemplateGarden</a></span> </div>
+                <div class="col-md-8"> <span class="copyright">Copyright &copy; 2015 WKC Group. Design by <a href="http://www.templategarden.com" rel="nofollow">TemplateGarden</a></span> </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="#"><i class="fa fa-twitter"></i></a> </li>
