--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="container">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                            <a class="navbar-brand" href="#home"><img class="img-responsive" src="assets/img/sketec.jpg" width="35%" Height="35%" align=""></a>
+                            <a class="navbar-brand" href="#home"><img id="logo" class="img-responsive" src="assets/img/sketec.jpg" width="35%" Height="35%" align=""></a>
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
