--- a/index.html
+++ b/index.html
@@ -283,10 +283,12 @@
                         <div class="col-sm-2 col-sm-offset-3">
                             <img src="assets/img/qr1.png" class="qr" />
                         </div>
-                        <div class="col-sm-4 col-xs-offset-4 col-sm-offset-0" style="text-align:left;">
-                            <p><i class="fa fa-user fa-2x"></i>  Kitipat Veerachien</p>
-                            <p><i class="fa fa-envelope-o fa-2x"></i>  kitipat@wkcgroupthailand.com</p>
-                            <p><i class="fa fa-phone fa-2x"></i>  +6689-199-1414</p>
+                        <div class="col-sm-4" style="text-align:left;">
+                            <div class="con-contianer">
+                                <p><i class="fa fa-user fa-2x"></i>  Kitipat Veerachien</p>
+                                <p><i class="fa fa-envelope-o fa-2x"></i>  kitipat@wkcgroupthailand.com</p>
+                                <p><i class="fa fa-phone fa-2x"></i>  +6689-199-1414</p>    
+                            </div>
                         </div>
                     </div>
                 </div>
