--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <div class="col-md-offset-3 col-md-3 centered">
                         <i class="fa fa-map-marker fa-2x"></i>
                         <p>
-                            Silom Terrace, 101 Lardpao, Bangkok 10170
+                            101 Lardpao, Bangkok 10170
                         </p>
                     </div>
                     <div class="col-md-2 centered">
